# Aether_Browser

./: .ai-context.md  AETHER_REFACTOR_PLAN.md  AGENTS.md  BUILD.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  KORLANG.md  README.md  ROADMAP.md  aether_tabs.json  build.rs  css-caelum-bridge.json  err.txt  layout_debug.txt  libhtml5.rlib  run_err.txt  rustc-ice-2026-07-05T08_47_58-5620.txt  temp_canvas.rs  temp_canvas2.rs  temp_header.rs
.github/workflows/: ci.yml
Plans/: ENGINE.md  ui-implementation-plan.md
crates/aether-caelum/: Cargo.toml  README.md
crates/aether-caelum/src/: geometry.rs  lib.rs  macros.rs  prelude.rs  style_helpers.rs
crates/aether-caelum/src/compute/: block.rs  flexbox.rs  float.rs  leaf.rs  mod.rs
crates/aether-caelum/src/compute/grid/: alignment.rs  explicit_grid.rs  mod.rs  placement.rs  track_sizing.rs
crates/aether-caelum/src/compute/grid/types/: cell_occupancy.rs  coordinates.rs  grid_item.rs  grid_track.rs  grid_track_counts.rs  named.rs
crates/aether-caelum/src/style/: alignment.rs  available_space.rs  block.rs  compact_length.rs  dimension.rs  flex.rs  float.rs  grid.rs  mod.rs
crates/aether-caelum/src/tree/: cache.rs  caelum_tree.rs  layout.rs  node.rs  traits.rs
crates/aether-caelum/src/util/: math.rs  mod.rs  parse.rs  print.rs  resolve.rs  sys.rs
crates/aether-css/: Cargo.toml  build.rs  css-properties.json
crates/aether-css/src/: lib.rs  parser.rs  property_names.rs  resolver.rs  style_value.rs
crates/aether-dom/: Cargo.toml
crates/aether-dom/src/: lib.rs
crates/aether-html/: Cargo.toml  build.rs  tokenizer-states.json
crates/aether-html/src/: lib.rs  tokenizer.rs  tree_builder.rs
docs/: css.md  dom.md  event-handling.md  index.md  js-runtime.md  korlang.md  layout-rendering.md  networking.md  parser.md  production-architecture.md  standards.md  style-matching.md  ui.md
examples/: korlang_demo.rs  korlang_repl.rs
korlang/: Cargo.toml  README.md
korlang/lib/: browser_ui.kor
korlang/scripts/: browser.kor
korlang/src/: lib.rs
korlang/src/compiler/: formatter.rs  lexer.rs  mod.rs  parser.rs  rust_gen.rs
korlang/src/vm/: mod.rs
screens/: browser-main.html  command-palette.html  mobile-ios.html  settings.html
src/: bridge_gen.rs  lib.rs  logging.rs  main.rs
src/engine/: caelum.rs  dom.rs  korlang.rs  mod.rs  parser.rs  stratus.rs  style.rs
src/engine/caelum/: geometry.rs  mod.rs  prelude.rs  style_helpers.rs
src/engine/css/: mod.rs  parser.rs
src/engine/dom/: mod.rs
src/engine/events/: mod.rs
src/engine/image/: mod.rs
src/engine/js/: events.rs  fetch.rs  js_bridge.rs  mod.rs  selector.rs  storage.rs  timers.rs
src/engine/layout/: box.rs  layout_box.rs  layout_engine.rs  mod.rs
src/engine/media/: mod.rs
src/engine/net/: mock.rs  mod.rs
src/engine/parser/: mod.rs  tokenizer.rs  tree_builder.rs
src/engine/pipeline/: extractor.rs  fetcher.rs  layout.rs  mod.rs  navigator.rs
src/engine/process/: mod.rs
src/engine/renderer/: renderer.rs
src/engine/standards/: css3.rs  html5.rs  mod.rs
src/engine/stratus/: matcher.rs  mod.rs  parser.rs  resolver.rs  style_value.rs
src/ui/: kor_renderer.rs  mod.rs  style.rs
src/ui/screens/: browser.rs  browser_test.rs  mod.rs  palette.rs  settings.rs
temp_silent_flow/stitch_aether_browser_silent_flow_ux/aether/: DESIGN.md
temp_silent_flow/stitch_aether_browser_silent_flow_ux/aether_active_focus/: code.html
temp_silent_flow/stitch_aether_browser_silent_flow_ux/aether_command_palette/: code.html
tests/: css_regression.rs  html5_compliance.rs  integration_test.rs  js_bridge_test.rs  js_engine_tests.rs  korlang_advanced_tests.rs  layout_stress.rs  rendering.rs  rendering_pipeline_tests.rs  sidebar_tests.rs
tests/compliance/: html5.rs
(+41 files in other folders)
