[workspace]
members = ["korlang", "crates/aether-dom", "crates/aether-html", "crates/aether-css", "crates/aether-caelum"]
resolver = "2"
[package]
name = "aether-browser"
version = "0.1.0"
edition = "2021"
[lib]
path = "src/lib.rs"
[dependencies]
iced = { version = "0.13", features = ["canvas", "image", "tiny-skia", "wgpu", "tokio"] }
rquickjs = "0.11.0"
ureq = { version = "3.3.0", features = ["native-tls"] }
wgpu = "29.0.3"
image = "0.25"
korlang = { path = "./korlang" }
symphonia = "0.5"
slotmap = "1.0"
chrono = "0.4"
strum = { version = "0.26", features = ["derive"] }

aether-dom = { path = "crates/aether-dom" }
aether-html = { path = "crates/aether-html" }
aether-css = { path = "crates/aether-css" }
aether-caelum = { path = "crates/aether-caelum" }

[profile.dev]
overflow-checks = false

[features]
default = ["content_size"]
content_size = []
