[workspace]
members = ["korlang", "crates/aether-dom", "crates/aether-html", "crates/aether-css", "crates/aether-caelum"]
resolver = "2"
[package]
name = "aether-browser"
version = "0.1.0"
edition = "2021"
[lib]
path = "src/lib.rs"
[dependencies]
iced = { version = "0.13", features = ["canvas", "image", "tiny-skia", "wgpu", "tokio"] }
rquickjs = "0.11.0"
reqwest = { version = "0.12", features = ["blocking", "http2", "native-tls"] }
image = "0.25"
korlang = { path = "./korlang" }
chrono = "0.4"
unicode-width = "0.2"
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

aether-dom = { path = "crates/aether-dom" }
aether-html = { path = "crates/aether-html" }
aether-css = { path = "crates/aether-css" }
aether-caelum = { path = "crates/aether-caelum" }

[build-dependencies]
serde_json = "1.0"

[profile.dev]
overflow-checks = true

[features]
default = ["content_size"]
content_size = []
