[package]
name = "aether-caelum"
version = "0.1.0"
edition = "2021"
description = "A between-the-lines layout engine for Rust, implementing Flexbox, Grid, and Block layout"
license = "MIT"
repository = "https://github.com/SKYIOUS/aether-caelum"
keywords = ["layout", "flexbox", "css", "grid", "ui"]
categories = ["gui", "rendering::data-formats"]

[dependencies]
slotmap = "1.0"

[features]
default = ["content_size"]
content_size = []

[package.metadata.docs.rs]
all-features = true
